--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -14,6 +14,7 @@ body {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	background-color: #141414;
 	color: white;
+	font-size: 20px;
 	line-height: 1.5;
 	padding: 5%;
 }
@@ -21,6 +22,14 @@ body {
 a {
 	color: inherit;
 	text-decoration: none;
+
+	&:hover {
+		color: $red;
+	}
+}
+
+h1 {
+	color: #999;
 }
 
 .logo {
@@ -37,6 +46,12 @@ a {
 }
 
 .category {
-	flex: 1 1 25%;
+	flex: 1 1 320px;
 	padding: 30px 20px 30px 0;
+}
+
+.list {
+	list-style: none;
+	// height: 0;
+	// overflow: hidden;
 }
